--- a/manifests/prometheus/service.yaml
+++ b/manifests/prometheus/service.yaml
@@ -6,7 +6,7 @@ metadata:
   labels:
     app: prometheus-server
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
     - name: web
       port: 9090
