Add comprehensive k3d support and enhanced monitoring stack
Major enhancements:
- Added k3d-optimized deployment script (helm-deploy-k3d.sh) with reduced resource limits
- Created k3d cluster setup script (k3d-setup.sh) for local testing
- Added K3D Quick Start Guide with troubleshooting and known issues

New components and features:
- Helm-based deployment for additional monitoring components
- Added kube-state-metrics, cert-manager, External Secrets Operator
- Integrated ArgoCD for GitOps deployments
- Added Istio service mesh (control plane + ingress gateway)
- Expanded Grafana from 10 to 11 dashboards (added External Secrets dashboard)
- Sample applications and manifests for realistic metrics generation

k3d-specific fixes:
- Fixed ArgoCD Redis ImagePullBackOff by using Docker Hub instead of AWS ECR Public
- Fixed Istio ingress gateway by using NodePort instead of LoadBalancer
- Updated External Secrets manifests from v1beta1 to v1 API
- Disabled problematic fake provider samples, created working Kubernetes provider example

Enhanced monitoring coverage:
- Added Prometheus scrape configs for all new components
- Expanded remote write filter to include all component metrics
- Added kubelet and cAdvisor scraping for container/volume metrics
- Configured Istio telemetry collection

Documentation improvements:
- Updated README with comprehensive architecture diagram
- Added detailed component overview and deployment instructions
- Removed AI attribution from PromQL migration guide
- Integrated troubleshooting into K3D Quick Start Guide
- Updated all file structure documentation

All changes have been tested and verified on k3d local clusters.
No PII or sensitive information included in commits.

--- a/manifests/grafana/deployment.yaml
+++ b/manifests/grafana/deployment.yaml
@@ -42,6 +42,7 @@ spec:
               7639:istio-mesh.json
               7645:istio-control-plane.json
               11001:cert-manager.json
+              14043:external-secrets.json
               8171:kubernetes-nodes.json
               11454:k8s-storage-volumes.json
               15661:k8s-dashboard.json
